--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "hbs": "^4.2.0",
     "nodemon": "^3.0.1"
@@ -14,4 +15,5 @@
   "author": "",
   "license": "ISC",
   "description": ""
+ 
 }
